feat: add 5G Antenna Competition to epitech-training page and update seminar count

--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -76,7 +76,7 @@
                         <img class="project-img" src="../assets/img/piscine.png" alt="Epitech Piscine - Python, Linux and algorithm projects" width="800" height="600">
                         
                         <div class="about__text project-text">
-                            <h3>4-month intensive training — 9 technical seminars</h3>
+                            <h3>4-month intensive training — 9 technical seminars + 1 competition</h3>
                             <p>An immersive Epitech program covering development fundamentals: front-end, back-end, full-stack architecture, DevOps, CI/CD, and project management. Mix of individual exercises and group projects with team management, collaborative code reviews, and agile methodologies.</p>
 
                             <div class="seminars-grid">
@@ -214,6 +214,21 @@
                                         <img src="https://img.shields.io/badge/Gantt-4ECDC4?logo=chart&logoColor=white" alt="Gantt">
                                         <img src="https://img.shields.io/badge/Budget-FFE66D?logo=money&logoColor=black" alt="Budget">
                                         <img src="https://img.shields.io/badge/Risk%20Analysis-FF6B6B?logo=shield&logoColor=white" alt="Risk Analysis">
+                                    </span>
+                                </div>
+                                
+                                <div class="seminar-card">
+                                    <a href="https://github.com/RomeoCavazza/piscine-epitech/tree/main/competition" target="_blank" rel="noopener" class="seminar-github-link" title="View on GitHub"><i class='bx bxl-github'></i></a>
+                                    <h4>
+                                        <i class='bx bx-trophy'></i> 5G Antenna Competition <span>Optimization Challenge</span>
+                                    </h4>
+                                    <p>Algorithmic optimization competition — optimal deployment of 5G antenna network to cover a city while minimizing installation costs.</p>
+                                    <span class="badge-container">
+                                        <img src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=white" alt="Python">
+                                        <img src="https://img.shields.io/badge/Algorithms-FF6B6B?logo=algorithm&logoColor=white" alt="Algorithms">
+                                        <img src="https://img.shields.io/badge/Optimization-4ECDC4?logo=optimization&logoColor=white" alt="Optimization">
+                                        <img src="https://img.shields.io/badge/Greedy-FFE66D?logo=chart&logoColor=black" alt="Greedy Algorithms">
+                                        <img src="https://img.shields.io/badge/Clustering-FF6B6B?logo=network&logoColor=white" alt="Clustering">
                                     </span>
                                 </div>
                             </div>
