feat: update README and shorten 5G competition description

--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -222,7 +222,7 @@
                                     <h4>
                                         <i class='bx bx-trophy'></i> 5G Antenna Competition <span>Optimization Challenge</span>
                                     </h4>
-                                    <p>Algorithmic optimization competition — optimal deployment of 5G antenna network to cover a city while minimizing installation costs.</p>
+                                    <p>5G antenna optimization: minimize deployment costs while covering a city.</p>
                                     <span class="badge-container">
                                         <img src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=white" alt="Python">
                                         <img src="https://img.shields.io/badge/Algorithms-FF6B6B?logo=algorithm&logoColor=white" alt="Algorithms">
