feat: replace Boxicons with official logos for Jenkins and Ansible in seminar titles

--- a/pages/epitech-training.html
+++ b/pages/epitech-training.html
@@ -33,6 +33,14 @@
                 transform: translateY(-50%) scale(1.2);
                 opacity: 1;
             }
+            .seminar-logo-icon {
+                width: 1.2em;
+                height: 1.2em;
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 0.3em;
+                filter: brightness(0) saturate(100%) invert(40%) sepia(100%) saturate(2000%) hue-rotate(200deg) brightness(1);
+            }
         </style>
     </head>
     <body>
@@ -159,7 +167,7 @@
                                 <div class="seminar-card">
                                     <a href="https://github.com/RomeoCavazza/piscine-epitech/tree/main/seminar-devops" target="_blank" rel="noopener" class="seminar-github-link" title="View on GitHub"><i class='bx bxl-github'></i></a>
                                     <h4>
-                                        <i class='bx bx-server'></i> DevOps Seminar <span>Days 56-60</span>
+                                        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/ansible.svg" alt="Ansible" class="seminar-logo-icon"> DevOps Seminar <span>Days 56-60</span>
                                     </h4>
                                     <p>Linux admin, Ansible, virtualization, deployment.</p>
                                     <span class="badge-container">
@@ -191,11 +199,11 @@
                                 <div class="seminar-card">
                                     <a href="https://github.com/RomeoCavazza/piscine-epitech/tree/main/seminar-jenkins" target="_blank" rel="noopener" class="seminar-github-link" title="View on GitHub"><i class='bx bxl-github'></i></a>
                                     <h4>
-                                        <i class='bx bx-cog'></i> Jenkins Seminar <span>Days 66-70</span>
+                                        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/jenkins.svg" alt="Jenkins" class="seminar-logo-icon"> Jenkins Seminar <span>Days 66-70</span>
                                     </h4>
                                     <p>CI/CD automation, Configuration as Code (JCasC), Job DSL pipelines.</p>
                                     <span class="badge-container">
-                                        <img src="https://img.shields.io/badge/Jenkins-D24939?logo=jenkins&logoColor=white" alt="Jenkins">
+                                        <img src="https://img.shields.io/badge/Jenkins-2496ED?logo=jenkins&logoColor=white" alt="Jenkins">
                                         <img src="https://img.shields.io/badge/CI%2FCD-pipelines-blue" alt="CI/CD">
                                         <img src="https://img.shields.io/badge/Groovy-4298B8?logo=apachegroovy&logoColor=white" alt="Groovy">
                                         <img src="https://img.shields.io/badge/YAML-000000?logo=yaml&logoColor=white" alt="YAML">
